# predictive_maintenance

./: .gitignore  README.md  pyproject.toml
app/: Home.py  app_text.py  main.py  problem_statement.txt
app/pages/: 1_theoretical_backgroud.py  2_Basic_Exploratory_Data_Analysis.py  2_EDA.py  2_Exploratory_Data_Analysis.py  3_Telemetry_Exploratory_Data_Analysis.py  3_Telemetry_Feature_Engineering.py  4_Maintenance_Prioritization_Dashboard.py  4_Production_Dashboard.py
app/pmhelpers/: plots.py
app/scripts/: create_basic_eda_plots.py  create_dashboard_demo_data.py  create_eda_data.py  create_model_data.py  create_model_output.py
app/utils/: ui_components_mpd.py
data/: PdM_errors.csv  PdM_failures.csv  PdM_maintenance.csv  comp_fail_plot.csv  daily_plot_df.csv  machine_fail_plot.csv  time_between_fail_flag.csv  time_to_fail.csv
pmhelpers/: dataprocessing.py  models.py  plots.py  test.py
scripts/: create_dashboard_demo_data.py  create_eda_data.py  create_model_data.py  create_model_output.py
src/pmhelpers/: plots.py  test.py
