[project]
name = "predictive-maintenance-app"  # ✅ Give the whole project a proper name
version = "0.1.0"
description = "Streamlit app for predictive maintenance analysis"
authors = [{ name = "Michael Atkinson", email = "atki2828@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit",
    "pandas",
    "numpy",
    "matplotlib",
    "seaborn",
    "lifelines",
    "polars==0.20.30",
    "scikit-learn",
    "plotly",
    "jupyterlab",
    "ipykernel"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["pmhelpers"]  # ✅ Explicitly include the helpers folder

[tool.isort]
profile = "black"